# django-huey-monitor

./: .dockerignore  .editorconfig  .flake8  .gitignore  Makefile  README.md  compose.sh  docker-compose.yml  manage.py  noxfile.py  pyproject.toml  pytest-ci.ini  requirements.dev.txt  requirements.django32.txt  requirements.django41.txt  requirements.django42.txt  requirements.django50.txt  requirements.django51.txt  requirements.txt  update_readme.py
.github/workflows/: pythonapp.yml  tests.yml
docker/: common.env
docker/django/: Dockerfile  entrypoint.sh
docker/huey/: entrypoint.sh
docker/postgres/: init-user-db.sh
docker/utils/: init.sh  kill_python.sh  wait_for_services.py
huey_monitor/: __init__.py  admin.py  apps.py  checks.py  constants.py  context_processors.py  humanize.py  models.py  progress_cache.py  tasks.py  tqdm.py  tqdm.py.orig
huey_monitor/locale/de/LC_MESSAGES/: django.mo  django.po
huey_monitor/locale/en/LC_MESSAGES/: django.mo  django.po
huey_monitor/migrations/: 0001_initial.py  0002_fix_delete.py  0003_add_meta_fields.py  0004_add_parent_task_relation.py  0005_progress_info.py  0006_add_progress_count.py  0006_remove_task_progress_model.py  0007_data_migration.py  0008_delete_taskprogressmodel.py  0009_fix_optinal_fields.py  0010_alter_taskmodel_parent_task.py  0011_remove_taskmodel_parent_task_remove_taskmodel_state_and_more.py  0012_initial.py
huey_monitor/static/: huey_monitor.css
huey_monitor/templates/admin/huey_monitor/: huey_counts_info.html
huey_monitor/templates/admin/huey_monitor/taskmodel/: change_list.html  change_list_object_tools.html  column_name.html  field_signals.html  task_hierarchy_info.html
huey_monitor/templatetags/: huey_monitor.py
huey_monitor_project/: __init__.py  __main__.py  huey_docker_instance.py  urls.py
huey_monitor_project/settings/: docker.py  local.py  prod.py  tests.py
huey_monitor_project/test_app/: __init__.py  apps.py  models.py  tasks.py
huey_monitor_project/test_app/management/commands/: fire_parallel_processing_task.py  fire_test_tasks.py  run_testserver.py
huey_monitor_project/test_project/: publish.py  urls.py
huey_monitor_project/test_project/settings/: base.py  tests.py
huey_monitor_project/tests/: __init__.py  test_admin.py  test_checks.py  test_doctest.py  test_huey_monitor.py  test_huey_monitor_models.py  test_project_setup.py  test_tasks.py  test_templatetags.py  test_tqdm.py  utils.py
huey_monitor_tests/: html_assertion.py
huey_monitor_tests/test_app/: __init__.py  apps.py  tasks.py  utils.py
huey_monitor_tests/test_app/management/commands/: delete_all_tasks_data.py  fire_parallel_processing_task.py  fire_test_tasks.py  run_testserver.py
huey_monitor_tests/test_project/: huey_docker_instance.py  huey_tests_instance.py  publish.py
huey_monitor_tests/test_project/settings/: base.py  docker.py  tests.py
huey_monitor_tests/tests/: test_checks.py  test_huey_monitor.py  test_model.py  test_tasks.py  test_tqdm.py  utils.py
