[tool.poetry]
name = "django-huey-monitor"
version = "0.6.0"
description = "Django based tool for monitoring huey task queue: https://github.com/coleifer/huey"
authors = ["JensDiemer <git@jensdiemer.de>"]
packages = [
    { include = "huey_monitor" },
    { include = "huey_monitor_tests" },
]
homepage = "https://github.com/boxine/django-huey-monitor/"
keywords=['huey','django']
classifiers = [
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    'Framework :: Django',
    "Topic :: Database :: Front-Ends",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Operating System :: OS Independent",
]
include = ['LICENSE', 'README.md']

readme='README.md'

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"  # Enforce 3.9 in the future
django = "*"
huey = "*"
bx_py_utils = "*"  # https://github.com/boxine/bx_py_utils
bx_django_utils = "*"  # https://github.com/boxine/bx_django_utils

[tool.poetry.dev-dependencies]
colorlog = "*"
django-redis = "*"
django-debug-toolbar = "*"  # http://django-debug-toolbar.readthedocs.io/en/stable/changes.html
poetry-publish = "*"  # https://github.com/jedie/poetry-publish
docker-compose = "*"
psycopg2-binary = "*"
tox = "*"
pytest = "*"
pytest-randomly = "*"  # https://github.com/pytest-dev/pytest-randomly
pytest-cov = "*"
pytest-django = "*"
pytest-darker = "*"  # https://github.com/akaihola/pytest-darker
coveralls = "*"

darker = {version = "*", extras = ["isort"]}  # https://github.com/akaihola/darker
flake8 = "*"

[tool.poetry.scripts]
publish = "huey_monitor_tests.test_project.publish:publish"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.darker]
src = ['huey_monitor', 'huey_monitor_tests']
revision = "origin/master..."
line_length = 100
verbose = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
line_length=120
skip_glob=["*/htmlcov/*","*/migrations/*","*/volumes/*"]
known_first_party=["huey_monitor","huey_monitor_tests"]
lines_after_imports=2

[tool.coverage.run]
omit=[".*"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
minversion = "6.0"
DJANGO_SETTINGS_MODULE="huey_monitor_tests.test_project.settings.tests"
norecursedirs = ".* migrations __pycache__ coverage* dist htmlcov volumes"
# sometimes helpfull "addopts" arguments:
#    -vv
#    --verbose
#    --capture=no
#    --trace-config
#    --full-trace
#    -p no:warnings
addopts = """
    --reuse-db
    --nomigrations
    --cov=.
    --cov-report term-missing
    --no-cov-on-fail
    --showlocals
    --darker
    --doctest-modules
    --failed-first
    --last-failed-no-failures all
    --new-first
    -p no:randomly
"""


[tool.tox]
# https://tox.readthedocs.io/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{39,310,311}-django{3.2,4.0,4.1}
skip_missing_interpreters = True

[testenv]
passenv = *
deps =
    django3.2: django>=3.2,<3.3
    django4.0: django>=4.0,<4.1
    django4.1: django>=4.1,<4.2
allowlist_externals =
    poetry
commands =
    python --version
    poetry run django-admin --version
    poetry run pytest
"""
