[project]
name = "django-huey-monitor"
dynamic = ["version"]
description = "Django based tool for monitoring huey task queue: https://github.com/coleifer/huey"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'django-huey-monitor@jensdiemer.de'}
]
requires-python = ">=3.11"
dependencies = [
    "huey",  # https://github.com/coleifer/huey
    "django",
    "bx_py_utils",  # https://github.com/boxine/bx_py_utils
    "bx_django_utils",  # https://github.com/boxine/bx_django_utils
]
[dependency-groups]
dev = [
    "gevent",  # https://github.com/gevent/gevent
    "django-redis",
    "psycopg2-binary",
    "manage_django_project>=0.9.2",  # https://github.com/jedie/manage_django_project
    "django-debug-toolbar",  # http://django-debug-toolbar.readthedocs.io/en/stable/changes.html
    "colorlog",  # https://github.com/borntyping/python-colorlog
    "gunicorn",  # https://github.com/benoimyproject.wsgitc/gunicorn
    "uv",  # https://github.com/astral-sh/uv
    "hatchling",  # https://github.com/pypa/hatch/tree/master/backend
    "tblib",   # https://github.com/ionelmc/python-tblib
    "nox",  # https://github.com/wntrblm/nox
    "coverage",  # https://github.com/nedbat/coveragepy
    "autopep8",  # https://github.com/hhatto/autopep8
    "pyupgrade",  # https://github.com/asottile/pyupgrade
    "flake8",  # https://github.com/pycqa/flake8
    "flake8-bugbear",  # https://github.com/PyCQA/flake8-bugbear
    "pyflakes",  # https://github.com/PyCQA/pyflakes
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "typeguard",  # https://github.com/agronholm/typeguard/

    # https://github.com/akaihola/darker
    # https://github.com/ikamensh/flynt
    # https://github.com/pycqa/isort
    # https://github.com/pygments/pygments
    "darker[flynt, isort, color]",

    "model_bakery",  # https://github.com/model-bakers/model_bakery
    "requests-mock",
    "django-override-storage",  # https://github.com/danifus/django-override-storage
]

[project.urls]
Documentation = "https://github.com/boxine/django-huey-monitor/"
Source = "https://github.com/boxine/django-huey-monitor/"


[project.scripts]
# Must be set in ./manage.py and PROJECT_SHELL_SCRIPT:
huey_monitor_project = "huey_monitor_project.__main__:main"

[manage_django_project]
module_name="huey_monitor_project"

# Django settings used for all commands except test/coverage/tox:
local_settings='huey_monitor_project.settings.local'

# Django settings used for test/coverage/tox commands:
test_settings='huey_monitor_project.settings.tests'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["huey_monitor", "huey_monitor_project"]

[tool.hatch.version]
path = "huey_monitor/__init__.py"


[tool.cli_base]
version_module_name = "huey_monitor" # Used by "update-readme-history" pre-commit hook


[tool.cli_base.pip_audit]
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[
#    "CVE-2019-8341", # Jinja2: Side Template Injection (SSTI)
]





[tool.darker]
src = ['.']
revision = "origin/main..."
line_length = 119
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=['.*', '*/htmlcov/*','*/migrations/*', 'volumes']
known_first_party=['huey_monitor']
line_length=119
lines_after_imports=2


[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['.']
command_line = '-m huey_monitor_project test --shuffle --parallel --buffer'

[tool.coverage.report]
omit = ['.*', '*/tests/*', '*/migrations/*', 'volumes']
skip_empty = true
fail_under = 30
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests', 'migrations', 'volumes']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "53a7e85"
initial_date = 2023-04-10T19:08:56+02:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "managed-django-project"
applied_migrations = [
    "3c16cf7", # 2023-12-21T22:22:06+01:00
    "e2b20e5", # 2024-09-26T19:43:41+02:00
    "b3e0624", # 2025-05-01T00:07:45+02:00
]

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "django-huey-monitor@jensdiemer.de"
project_name = "django-huey-monitor"
package_name = "huey_monitor"
package_version = "0.7.0"
package_description = "Django based tool for monitoring huey task queue: https://github.com/coleifer/huey"
package_url = "https://github.com/boxine/django-huey-monitor/"
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"
